20181101-2149 first integration of tupelo into cljs-template. tests passing